// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testing the ExpenseList with no data 1`] = `
<div
  className="content-container"
>
  <h1>
    ExpenseList
  </h1>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--empty"
    >
      <span>
        No Expenses
      </span>
    </div>
    <Component />
  </div>
</div>
`;

exports[`Testing the ExpenseList with the required data 1`] = `
<div
  className="content-container"
>
  <h1>
    ExpenseList
  </h1>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Component />
    <ExpenseListItem
      amount={1250}
      createdAt={0}
      description="Rent"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={1350}
      createdAt={-345600000}
      description="Gas Bill"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={1550}
      createdAt={345600000}
      description="Water Bill"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
